// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package protobuf_unittest_generated;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  adjusted = 1;
  aggregateValue = 2;
  allCases = 3;
  allowAlias = 4;
  alwaysPrintEnumsAsInts = 5;
  alwaysPrintInt64sAsNumbers = 6;
  annotation = 7;
  any = 8;
  AnyExtensionField = 9;
  AnyMessageExtension = 10;
  AnyMessageStorage = 11;
  AnyUnpackError = 12;
  Api = 13;
  appended = 14;
  appendUIntHex = 15;
  appendUnknown = 16;
  areAllInitialized = 17;
  Array = 18;
  arrayDepth = 19;
  arrayLiteral = 20;
  arraySeparator = 21;
  as = 22;
  asciiOpenCurlyBracket = 23;
  asciiZero = 24;
  available = 25;
  b = 26;
  base64Values = 27;
  baseAddress = 28;
  BaseType = 29;
  begin = 30;
  binary = 31;
  BinaryDecoder = 32;
  BinaryDecodingError = 33;
  BinaryDecodingOptions = 34;
  BinaryDelimited = 35;
  BinaryEncoder = 36;
  BinaryEncodingError = 37;
  BinaryEncodingMessageSetSizeVisitor = 38;
  BinaryEncodingMessageSetVisitor = 39;
  BinaryEncodingSizeVisitor = 40;
  BinaryEncodingVisitor = 41;
  binaryOptions = 42;
  body = 43;
  Bool = 44;
  booleanLiteral = 45;
  BooleanLiteralType = 46;
  boolValue = 47;
  Bytes = 48;
  bytesInGroup = 49;
  bytesRead = 50;
  BytesValue = 51;
  c = 52;
  capitalizeNext = 53;
  cardinality = 54;
  CaseIterable = 55;
  ccEnableArenas = 56;
  ccGenericServices = 57;
  Character = 58;
  chars = 59;
  class = 60;
  clearAggregateValue = 61;
  clearAllowAlias = 62;
  clearBegin = 63;
  clearCcEnableArenas = 64;
  clearCcGenericServices = 65;
  clearClientStreaming = 66;
  clearCsharpNamespace = 67;
  clearCtype = 68;
  clearDefaultValue = 69;
  clearDeprecated = 70;
  clearDoubleValue = 71;
  clearEdition = 72;
  clearEnd = 73;
  clearExtendee = 74;
  clearExtensionValue = 75;
  clearGoPackage = 76;
  clearIdempotencyLevel = 77;
  clearIdentifierValue = 78;
  clearInputType = 79;
  clearIsExtension = 80;
  clearJavaGenerateEqualsAndHash = 81;
  clearJavaGenericServices = 82;
  clearJavaMultipleFiles = 83;
  clearJavaOuterClassname = 84;
  clearJavaPackage = 85;
  clearJavaStringCheckUtf8 = 86;
  clearJsonName = 87;
  clearJstype = 88;
  clearLabel = 89;
  clearLazy = 90;
  clearLeadingComments = 91;
  clearMapEntry = 92;
  clearMessageSetWireFormat = 93;
  clearName = 94;
  clearNamePart = 95;
  clearNegativeIntValue = 96;
  clearNoStandardDescriptorAccessor = 97;
  clearNumber = 98;
  clearObjcClassPrefix = 99;
  clearOneofIndex = 100;
  clearOptimizeFor = 101;
  clearOptions = 102;
  clearOutputType = 103;
  clearPackage = 104;
  clearPacked = 105;
  clearPhpClassPrefix = 106;
  clearPhpGenericServices = 107;
  clearPhpMetadataNamespace = 108;
  clearPhpNamespace = 109;
  clearPositiveIntValue = 110;
  clearProto3Optional = 111;
  clearPyGenericServices = 112;
  clearRubyPackage = 113;
  clearSemantic = 114;
  clearServerStreaming = 115;
  clearSourceCodeInfo = 116;
  clearSourceContext = 117;
  clearSourceFile = 118;
  clearStart = 119;
  clearStringValue = 120;
  clearSwiftPrefix = 121;
  clearSyntax = 122;
  clearTrailingComments = 123;
  clearType = 124;
  clearTypeName = 125;
  clearUnverifiedLazy = 126;
  clearValue = 127;
  clearWeak = 128;
  clientStreaming = 129;
  codePoint = 130;
  codeUnits = 131;
  Collection = 132;
  com = 133;
  comma = 134;
  contentsOf = 135;
  count = 136;
  countVarintsInBuffer = 137;
  csharpNamespace = 138;
  ctype = 139;
  customCodable = 140;
  CustomDebugStringConvertible = 141;
  d = 142;
  data = 143;
  dataResult = 144;
  date = 145;
  daySec = 146;
  daysSinceEpoch = 147;
  debugDescription = 148;
  decoded = 149;
  decodedFromJSONNull = 150;
  decodeExtensionField = 151;
  decodeExtensionFieldsAsMessageSet = 152;
  decodeJSON = 153;
  decodeMapField = 154;
  decodeMessage = 155;
  decoder = 156;
  decodeRepeated = 157;
  decodeRepeatedBoolField = 158;
  decodeRepeatedBytesField = 159;
  decodeRepeatedDoubleField = 160;
  decodeRepeatedEnumField = 161;
  decodeRepeatedFixed32Field = 162;
  decodeRepeatedFixed64Field = 163;
  decodeRepeatedFloatField = 164;
  decodeRepeatedGroupField = 165;
  decodeRepeatedInt32Field = 166;
  decodeRepeatedInt64Field = 167;
  decodeRepeatedMessageField = 168;
  decodeRepeatedSFixed32Field = 169;
  decodeRepeatedSFixed64Field = 170;
  decodeRepeatedSInt32Field = 171;
  decodeRepeatedSInt64Field = 172;
  decodeRepeatedStringField = 173;
  decodeRepeatedUInt32Field = 174;
  decodeRepeatedUInt64Field = 175;
  decodeSingular = 176;
  decodeSingularBoolField = 177;
  decodeSingularBytesField = 178;
  decodeSingularDoubleField = 179;
  decodeSingularEnumField = 180;
  decodeSingularFixed32Field = 181;
  decodeSingularFixed64Field = 182;
  decodeSingularFloatField = 183;
  decodeSingularGroupField = 184;
  decodeSingularInt32Field = 185;
  decodeSingularInt64Field = 186;
  decodeSingularMessageField = 187;
  decodeSingularSFixed32Field = 188;
  decodeSingularSFixed64Field = 189;
  decodeSingularSInt32Field = 190;
  decodeSingularSInt64Field = 191;
  decodeSingularStringField = 192;
  decodeSingularUInt32Field = 193;
  decodeSingularUInt64Field = 194;
  decodeTextFormat = 195;
  defaultAnyTypeURLPrefix = 196;
  defaultValue = 197;
  dependency = 198;
  deprecated = 199;
  description = 200;
  DescriptorProto = 201;
  Dictionary = 202;
  dictionaryLiteral = 203;
  digit = 204;
  digit0 = 205;
  digit1 = 206;
  digitCount = 207;
  digits = 208;
  digitValue = 209;
  discardableResult = 210;
  discardUnknownFields = 211;
  distance = 212;
  double = 213;
  doubleValue = 214;
  Duration = 215;
  E = 216;
  edition = 217;
  Element = 218;
  elements = 219;
  emitExtensionFieldName = 220;
  emitFieldName = 221;
  emitFieldNumber = 222;
  Empty = 223;
  emptyData = 224;
  encodeAsBytes = 225;
  encoded = 226;
  encodedJSONString = 227;
  encodedSize = 228;
  encodeField = 229;
  encoder = 230;
  end = 231;
  endArray = 232;
  endMessageField = 233;
  endObject = 234;
  endRegularField = 235;
  enum = 236;
  EnumDescriptorProto = 237;
  EnumOptions = 238;
  EnumReservedRange = 239;
  enumType = 240;
  enumvalue = 241;
  EnumValueDescriptorProto = 242;
  EnumValueOptions = 243;
  Equatable = 244;
  Error = 245;
  ExpressibleByArrayLiteral = 246;
  ExpressibleByDictionaryLiteral = 247;
  ext = 248;
  extDecoder = 249;
  extendedGraphemeClusterLiteral = 250;
  ExtendedGraphemeClusterLiteralType = 251;
  extendee = 252;
  ExtensibleMessage = 253;
  extension = 254;
  ExtensionField = 255;
  extensionFieldNumber = 256;
  ExtensionFieldValueSet = 257;
  ExtensionMap = 258;
  extensionRange = 259;
  ExtensionRangeOptions = 260;
  extensions = 261;
  extras = 262;
  F = 263;
  false = 264;
  field = 265;
  fieldData = 266;
  FieldDescriptorProto = 267;
  FieldMask = 268;
  fieldName = 269;
  fieldNameCount = 270;
  fieldNum = 271;
  fieldNumber = 272;
  fieldNumberForProto = 273;
  FieldOptions = 274;
  fields = 275;
  fieldSize = 276;
  FieldTag = 277;
  fieldType = 278;
  file = 279;
  FileDescriptorProto = 280;
  FileDescriptorSet = 281;
  fileName = 282;
  FileOptions = 283;
  filter = 284;
  first = 285;
  firstItem = 286;
  float = 287;
  floatLiteral = 288;
  FloatLiteralType = 289;
  FloatValue = 290;
  forMessageName = 291;
  formUnion = 292;
  forReadingFrom = 293;
  forTypeURL = 294;
  ForwardParser = 295;
  forWritingInto = 296;
  from = 297;
  fromAscii2 = 298;
  fromAscii4 = 299;
  fromByteOffset = 300;
  fromHexDigit = 301;
  func = 302;
  G = 303;
  GeneratedCodeInfo = 304;
  get = 305;
  getExtensionValue = 306;
  googleapis = 307;
  Google_Protobuf_Any = 308;
  Google_Protobuf_Api = 309;
  Google_Protobuf_BoolValue = 310;
  Google_Protobuf_BytesValue = 311;
  Google_Protobuf_DescriptorProto = 312;
  Google_Protobuf_DoubleValue = 313;
  Google_Protobuf_Duration = 314;
  Google_Protobuf_Empty = 315;
  Google_Protobuf_Enum = 316;
  Google_Protobuf_EnumDescriptorProto = 317;
  Google_Protobuf_EnumOptions = 318;
  Google_Protobuf_EnumValue = 319;
  Google_Protobuf_EnumValueDescriptorProto = 320;
  Google_Protobuf_EnumValueOptions = 321;
  Google_Protobuf_ExtensionRangeOptions = 322;
  Google_Protobuf_Field = 323;
  Google_Protobuf_FieldDescriptorProto = 324;
  Google_Protobuf_FieldMask = 325;
  Google_Protobuf_FieldOptions = 326;
  Google_Protobuf_FileDescriptorProto = 327;
  Google_Protobuf_FileDescriptorSet = 328;
  Google_Protobuf_FileOptions = 329;
  Google_Protobuf_FloatValue = 330;
  Google_Protobuf_GeneratedCodeInfo = 331;
  Google_Protobuf_Int32Value = 332;
  Google_Protobuf_Int64Value = 333;
  Google_Protobuf_ListValue = 334;
  Google_Protobuf_MessageOptions = 335;
  Google_Protobuf_Method = 336;
  Google_Protobuf_MethodDescriptorProto = 337;
  Google_Protobuf_MethodOptions = 338;
  Google_Protobuf_Mixin = 339;
  Google_Protobuf_NullValue = 340;
  Google_Protobuf_OneofDescriptorProto = 341;
  Google_Protobuf_OneofOptions = 342;
  Google_Protobuf_Option = 343;
  Google_Protobuf_ServiceDescriptorProto = 344;
  Google_Protobuf_ServiceOptions = 345;
  Google_Protobuf_SourceCodeInfo = 346;
  Google_Protobuf_SourceContext = 347;
  Google_Protobuf_StringValue = 348;
  Google_Protobuf_Struct = 349;
  Google_Protobuf_Syntax = 350;
  Google_Protobuf_Timestamp = 351;
  Google_Protobuf_Type = 352;
  Google_Protobuf_UInt32Value = 353;
  Google_Protobuf_UInt64Value = 354;
  Google_Protobuf_UninterpretedOption = 355;
  Google_Protobuf_Value = 356;
  goPackage = 357;
  group = 358;
  groupFieldNumberStack = 359;
  groupSize = 360;
  hadOneofValue = 361;
  handleConflictingOneOf = 362;
  hasAggregateValue = 363;
  hasAllowAlias = 364;
  hasBegin = 365;
  hasCcEnableArenas = 366;
  hasCcGenericServices = 367;
  hasClientStreaming = 368;
  hasCsharpNamespace = 369;
  hasCtype = 370;
  hasDefaultValue = 371;
  hasDeprecated = 372;
  hasDoubleValue = 373;
  hasEdition = 374;
  hasEnd = 375;
  hasExtendee = 376;
  hasExtensionValue = 377;
  hasGoPackage = 378;
  hash = 379;
  Hashable = 380;
  hasher = 381;
  HashVisitor = 382;
  hasIdempotencyLevel = 383;
  hasIdentifierValue = 384;
  hasInputType = 385;
  hasIsExtension = 386;
  hasJavaGenerateEqualsAndHash = 387;
  hasJavaGenericServices = 388;
  hasJavaMultipleFiles = 389;
  hasJavaOuterClassname = 390;
  hasJavaPackage = 391;
  hasJavaStringCheckUtf8 = 392;
  hasJsonName = 393;
  hasJstype = 394;
  hasLabel = 395;
  hasLazy = 396;
  hasLeadingComments = 397;
  hasMapEntry = 398;
  hasMessageSetWireFormat = 399;
  hasName = 400;
  hasNamePart = 401;
  hasNegativeIntValue = 402;
  hasNoStandardDescriptorAccessor = 403;
  hasNumber = 404;
  hasObjcClassPrefix = 405;
  hasOneofIndex = 406;
  hasOptimizeFor = 407;
  hasOptions = 408;
  hasOutputType = 409;
  hasPackage = 410;
  hasPacked = 411;
  hasPhpClassPrefix = 412;
  hasPhpGenericServices = 413;
  hasPhpMetadataNamespace = 414;
  hasPhpNamespace = 415;
  hasPositiveIntValue = 416;
  hasProto3Optional = 417;
  hasPyGenericServices = 418;
  hasRubyPackage = 419;
  hasSemantic = 420;
  hasServerStreaming = 421;
  hasSourceCodeInfo = 422;
  hasSourceContext = 423;
  hasSourceFile = 424;
  hasStart = 425;
  hasStringValue = 426;
  hasSwiftPrefix = 427;
  hasSyntax = 428;
  hasTrailingComments = 429;
  hasType = 430;
  hasTypeName = 431;
  hasUnverifiedLazy = 432;
  hasValue = 433;
  hasWeak = 434;
  hour = 435;
  i = 436;
  idempotencyLevel = 437;
  identifierValue = 438;
  if = 439;
  ignoreUnknownFields = 440;
  index = 441;
  init = 442;
  inout = 443;
  inputType = 444;
  insert = 445;
  Int = 446;
  Int32 = 447;
  Int32Value = 448;
  Int64 = 449;
  Int64Value = 450;
  Int8 = 451;
  integerLiteral = 452;
  IntegerLiteralType = 453;
  intern = 454;
  Internal = 455;
  InternalState = 456;
  into = 457;
  ints = 458;
  isA = 459;
  isEqual = 460;
  isEqualTo = 461;
  isExtension = 462;
  isInitialized = 463;
  isNegative = 464;
  itemTagsEncodedSize = 465;
  Iterator = 466;
  javaGenerateEqualsAndHash = 467;
  javaGenericServices = 468;
  javaMultipleFiles = 469;
  javaOuterClassname = 470;
  javaPackage = 471;
  javaStringCheckUtf8 = 472;
  JSONDecoder = 473;
  JSONDecodingError = 474;
  JSONDecodingOptions = 475;
  jsonEncoder = 476;
  JSONEncodingError = 477;
  JSONEncodingOptions = 478;
  JSONEncodingVisitor = 479;
  JSONMapEncodingVisitor = 480;
  jsonName = 481;
  jsonPath = 482;
  jsonPaths = 483;
  JSONScanner = 484;
  jsonString = 485;
  jsonText = 486;
  jsonUTF8Data = 487;
  jstype = 488;
  k = 489;
  Key = 490;
  keyField = 491;
  KeyType = 492;
  kind = 493;
  l = 494;
  label = 495;
  lazy = 496;
  leadingComments = 497;
  leadingDetachedComments = 498;
  length = 499;
  lessThan = 500;
  let = 501;
  lhs = 502;
  list = 503;
  listOfMessages = 504;
  listValue = 505;
  littleEndian = 506;
  littleEndianBytes = 507;
  load = 508;
  localHasher = 509;
  location = 510;
  M = 511;
  major = 512;
  makeIterator = 513;
  mapEntry = 514;
  MapKeyType = 515;
  mapToMessages = 516;
  MapValueType = 517;
  mapVisitor = 518;
  mdayStart = 519;
  merge = 520;
  message = 521;
  MessageBase = 522;
  messageDepthLimit = 523;
  MessageExtension = 524;
  MessageImplementationBase = 525;
  MessageOptions = 526;
  MessageSet = 527;
  messageSetWireFormat = 528;
  messageType = 529;
  Method = 530;
  MethodDescriptorProto = 531;
  MethodOptions = 532;
  methods = 533;
  minor = 534;
  Mixin = 535;
  mixins = 536;
  modifier = 537;
  modify = 538;
  month = 539;
  msgExtension = 540;
  mutating = 541;
  n = 542;
  name = 543;
  NameDescription = 544;
  NameMap = 545;
  NamePart = 546;
  names = 547;
  nanos = 548;
  nativeBytes = 549;
  nativeEndianBytes = 550;
  negativeIntValue = 551;
  nestedType = 552;
  newL = 553;
  newList = 554;
  newValue = 555;
  nextByte = 556;
  nextFieldNumber = 557;
  nil = 558;
  nilLiteral = 559;
  noStandardDescriptorAccessor = 560;
  nullValue = 561;
  number = 562;
  numberValue = 563;
  objcClassPrefix = 564;
  of = 565;
  oneofDecl = 566;
  OneofDescriptorProto = 567;
  oneofIndex = 568;
  OneofOptions = 569;
  oneofs = 570;
  OneOf_Kind = 571;
  optimizeFor = 572;
  OptimizeMode = 573;
  Option = 574;
  OptionalEnumExtensionField = 575;
  OptionalExtensionField = 576;
  OptionalGroupExtensionField = 577;
  OptionalMessageExtensionField = 578;
  options = 579;
  other = 580;
  others = 581;
  out = 582;
  outputType = 583;
  p = 584;
  package = 585;
  packed = 586;
  PackedEnumExtensionField = 587;
  PackedExtensionField = 588;
  padding = 589;
  parent = 590;
  parse = 591;
  partial = 592;
  path = 593;
  paths = 594;
  payload = 595;
  payloadSize = 596;
  phpClassPrefix = 597;
  phpGenericServices = 598;
  phpMetadataNamespace = 599;
  phpNamespace = 600;
  pointer = 601;
  pos = 602;
  positiveIntValue = 603;
  prefix = 604;
  preserveProtoFieldNames = 605;
  preTraverse = 606;
  printUnknownFields = 607;
  proto2 = 608;
  proto3DefaultValue = 609;
  proto3Optional = 610;
  ProtobufAPIVersionCheck = 611;
  ProtobufAPIVersion_3 = 612;
  ProtobufBool = 613;
  ProtobufBytes = 614;
  ProtobufDouble = 615;
  ProtobufEnumMap = 616;
  protobufExtension = 617;
  ProtobufFixed32 = 618;
  ProtobufFixed64 = 619;
  ProtobufFloat = 620;
  ProtobufInt32 = 621;
  ProtobufInt64 = 622;
  ProtobufMap = 623;
  ProtobufMessageMap = 624;
  ProtobufSFixed32 = 625;
  ProtobufSFixed64 = 626;
  ProtobufSInt32 = 627;
  ProtobufSInt64 = 628;
  ProtobufString = 629;
  ProtobufUInt32 = 630;
  ProtobufUInt64 = 631;
  protobuf_extensionFieldValues = 632;
  protobuf_fieldNumber = 633;
  protobuf_generated_isEqualTo = 634;
  protobuf_nameMap = 635;
  protobuf_newField = 636;
  protobuf_package = 637;
  protocol = 638;
  protoFieldName = 639;
  protoMessageName = 640;
  ProtoNameProviding = 641;
  protoPaths = 642;
  ProtoSendable = 643;
  public = 644;
  publicDependency = 645;
  putBoolValue = 646;
  putBytesValue = 647;
  putDoubleValue = 648;
  putEnumValue = 649;
  putFixedUInt32 = 650;
  putFixedUInt64 = 651;
  putFloatValue = 652;
  putInt64 = 653;
  putStringValue = 654;
  putUInt64 = 655;
  putUInt64Hex = 656;
  putVarInt = 657;
  putZigZagVarInt = 658;
  pyGenericServices = 659;
  R = 660;
  rawChars = 661;
  RawRepresentable = 662;
  RawValue = 663;
  read4HexDigits = 664;
  register = 665;
  RepeatedEnumExtensionField = 666;
  RepeatedExtensionField = 667;
  RepeatedGroupExtensionField = 668;
  RepeatedMessageExtensionField = 669;
  repeating = 670;
  requestStreaming = 671;
  requestTypeURL = 672;
  requiredSize = 673;
  reservedName = 674;
  reservedRange = 675;
  responseStreaming = 676;
  responseTypeURL = 677;
  result = 678;
  rethrows = 679;
  return = 680;
  ReturnType = 681;
  revision = 682;
  rhs = 683;
  root = 684;
  rubyPackage = 685;
  s = 686;
  sawBackslash = 687;
  sawSection4Characters = 688;
  sawSection5Characters = 689;
  scanner = 690;
  seconds = 691;
  self = 692;
  semantic = 693;
  Sendable = 694;
  separator = 695;
  serialize = 696;
  serializedData = 697;
  serializedSize = 698;
  serverStreaming = 699;
  service = 700;
  ServiceDescriptorProto = 701;
  ServiceOptions = 702;
  set = 703;
  setExtensionValue = 704;
  shift = 705;
  SimpleExtensionMap = 706;
  sizer = 707;
  source = 708;
  sourceCodeInfo = 709;
  sourceContext = 710;
  sourceEncoding = 711;
  sourceFile = 712;
  span = 713;
  split = 714;
  start = 715;
  startArray = 716;
  startArrayObject = 717;
  startField = 718;
  startIndex = 719;
  startMessageField = 720;
  startObject = 721;
  startRegularField = 722;
  state = 723;
  static = 724;
  StaticString = 725;
  storage = 726;
  String = 727;
  stringLiteral = 728;
  StringLiteralType = 729;
  stringResult = 730;
  stringValue = 731;
  struct = 732;
  structValue = 733;
  subDecoder = 734;
  subscript = 735;
  subVisitor = 736;
  Swift = 737;
  swiftPrefix = 738;
  SwiftProtobuf = 739;
  SwiftProtobufContiguousBytes = 740;
  syntax = 741;
  T = 742;
  tag = 743;
  terminator = 744;
  testDecoder = 745;
  text = 746;
  textDecoder = 747;
  TextFormatDecoder = 748;
  TextFormatDecodingError = 749;
  TextFormatDecodingOptions = 750;
  TextFormatEncodingOptions = 751;
  TextFormatEncodingVisitor = 752;
  textFormatString = 753;
  throws = 754;
  timeInterval = 755;
  timeIntervalSince1970 = 756;
  timeIntervalSinceReferenceDate = 757;
  Timestamp = 758;
  total = 759;
  totalArrayDepth = 760;
  totalSize = 761;
  trailingComments = 762;
  traverse = 763;
  true = 764;
  try = 765;
  type = 766;
  typealias = 767;
  TypeEnum = 768;
  typeName = 769;
  typePrefix = 770;
  typeStart = 771;
  typeUnknown = 772;
  typeURL = 773;
  UInt32 = 774;
  UInt32Value = 775;
  UInt64 = 776;
  UInt64Value = 777;
  UInt8 = 778;
  unicodeScalarLiteral = 779;
  UnicodeScalarLiteralType = 780;
  unicodeScalars = 781;
  UnicodeScalarView = 782;
  uninterpretedOption = 783;
  union = 784;
  uniqueStorage = 785;
  unknown = 786;
  unknownFields = 787;
  UnknownStorage = 788;
  unpackTo = 789;
  UnsafeBufferPointer = 790;
  UnsafeMutablePointer = 791;
  UnsafeMutableRawPointer = 792;
  UnsafeRawBufferPointer = 793;
  UnsafeRawPointer = 794;
  unverifiedLazy = 795;
  updatedOptions = 796;
  url = 797;
  utf8 = 798;
  utf8Ptr = 799;
  utf8ToDouble = 800;
  UTF8View = 801;
  v = 802;
  value = 803;
  valueField = 804;
  values = 805;
  ValueType = 806;
  var = 807;
  Version = 808;
  versionString = 809;
  visitExtensionFields = 810;
  visitExtensionFieldsAsMessageSet = 811;
  visitMapField = 812;
  visitor = 813;
  visitPacked = 814;
  visitPackedBoolField = 815;
  visitPackedDoubleField = 816;
  visitPackedEnumField = 817;
  visitPackedFixed32Field = 818;
  visitPackedFixed64Field = 819;
  visitPackedFloatField = 820;
  visitPackedInt32Field = 821;
  visitPackedInt64Field = 822;
  visitPackedSFixed32Field = 823;
  visitPackedSFixed64Field = 824;
  visitPackedSInt32Field = 825;
  visitPackedSInt64Field = 826;
  visitPackedUInt32Field = 827;
  visitPackedUInt64Field = 828;
  visitRepeated = 829;
  visitRepeatedBoolField = 830;
  visitRepeatedBytesField = 831;
  visitRepeatedDoubleField = 832;
  visitRepeatedEnumField = 833;
  visitRepeatedFixed32Field = 834;
  visitRepeatedFixed64Field = 835;
  visitRepeatedFloatField = 836;
  visitRepeatedGroupField = 837;
  visitRepeatedInt32Field = 838;
  visitRepeatedInt64Field = 839;
  visitRepeatedMessageField = 840;
  visitRepeatedSFixed32Field = 841;
  visitRepeatedSFixed64Field = 842;
  visitRepeatedSInt32Field = 843;
  visitRepeatedSInt64Field = 844;
  visitRepeatedStringField = 845;
  visitRepeatedUInt32Field = 846;
  visitRepeatedUInt64Field = 847;
  visitSingular = 848;
  visitSingularBoolField = 849;
  visitSingularBytesField = 850;
  visitSingularDoubleField = 851;
  visitSingularEnumField = 852;
  visitSingularFixed32Field = 853;
  visitSingularFixed64Field = 854;
  visitSingularFloatField = 855;
  visitSingularGroupField = 856;
  visitSingularInt32Field = 857;
  visitSingularInt64Field = 858;
  visitSingularMessageField = 859;
  visitSingularSFixed32Field = 860;
  visitSingularSFixed64Field = 861;
  visitSingularSInt32Field = 862;
  visitSingularSInt64Field = 863;
  visitSingularStringField = 864;
  visitSingularUInt32Field = 865;
  visitSingularUInt64Field = 866;
  visitUnknown = 867;
  wasDecoded = 868;
  weak = 869;
  weakDependency = 870;
  where = 871;
  wireFormat = 872;
  with = 873;
  withUnsafeBytes = 874;
  work = 875;
  WrappedType = 876;
  written = 877;
  yday = 878;
}
